# wode-wm

./: meson.build
include/wode-wm/: common.h  compositor.h  input.h  keyboard.h  layer-window.h  output.h  popup-window.h  toplevel-window.h  wayland.h  window.h  wlr.h  wode.h  xdg-shell.h
protocols/: plxwm-ctrl.xml
wm/: compositor.cpp  input.cpp  keyboard.cpp  layer-window.cpp  main.cpp  meson.build  output.cpp  popup-window.cpp  toplevel-window.cpp  window.cpp  xdg-shell.cpp
